# tlsproxy

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  default.yml
.github/workflows/: cmake-debug-test.yml
app/: main.c
benchmark/: compose.yml
benchmark/nginx/: nginx.conf  server.conf
cmake/cmocka/: FindCMocka.cmake
doc/: ARCHITECTURE.md
example/: cacert.pem  chain.pem  chainfile.yml  clntcert.pem  clntkey.pem  default.yml  intcert.pem  servcert.pem  servkey.pem
example-docker/: compose.yml
example-docker/config/: cacert.pem  default.yml  intcert.pem  servcert.pem  servkey.pem
inc/: config.h  errors.h  event.h  listen.h  logging.h  logmacros.h  proxy.h  queue.h  shmem.h  timeutils.h  version.h.in
src/: config.c  config.h  connection.c  connection.h  errors.h  event.c  event.h  listen.c  listen.h  logging.c  main.c  main.h  proxy.c  proxy.h  queue.c  queue.h  timeutils.c
test/: CMakeLists.txt  cacerts.yml  cacerts_cert-chain.yml  cert-chain.yml  macros.h  test_config.c  test_event.c  test_listen.c  test_proxy.c  test_queue.c  test_queue_bad_malloc.c
test/configs/: badconf1.yml  badconf10.yml  badconf11.yml  badconf12.yml  badconf2.yml  badconf3.yml  badconf4.yml  badconf5.yml  badconf6.yml  badconf7.yml  badconf8.yml  badconf9.yml  goodconf1.yml  goodconf2.yml  goodconf3.yml  goodconf4.yml  goodconf5.yml  goodconf6.yml
